fix: implement all pending test stubs for green build
- Fix 16 LemmaByLevelAbsenceAnalyzerTest failures by connecting quiz nodes
  to the AuditNode tree (parseLevelFromQuizNode needs milestone ancestry)
- Implement 39 DefaultLemmaAbsenceConfigTest stubs (config value assertions)
- Implement 8 DefaultAuditRunnerTest stubs (full chain with mocks)
- Implement 3 CourseToAuditableMapperTest stubs (mapping + error propagation)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>